<resources>
    <string name="app_by">by Carlos Rafael Gimenes das Neves</string>
    <string name="app_description">Music player with clean interface, equalizer, bass boost and customizable colors</string>
    <string name="app_more_info">Looking for more info?&lt;br/&gt;Maybe the source code?&lt;br/&gt;Have a request?&lt;br/&gt;Found a bug?!?&lt;br/&gt;Just want to contact me? :)&lt;br/&gt;&lt;br/&gt;Drop me an e-mail:&lt;br/&gt;&lt;a href=\"mailto:dev@carlosrafaelgn.com.br\"&gt;dev@carlosrafaelgn.com.br&lt;/a&gt;&lt;br/&gt;or visit the application\'s project site on GitHub: &lt;a href=\"https://github.com/carlosrafaelgn/FPlayAndroid\"&gt;FPlayAndroid&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Very special thanks to the people who helped translating FPlay:</string>
    <string name="app_more_info_thanks" translatable="false">&lt;br/&gt;&lt;br/&gt;Sviat Hurskyi (&lt;a href=\"mailto:sviat.hurskyi@gmail.com\"&gt;sviat.hurskyi@gmail.com&lt;/a&gt;)&lt;br/&gt;Stefan Fitzenreiter (&lt;a href=\"mailto:sfitzenreiter@gmail.com\"&gt;sfitzenreiter@gmail.com&lt;/a&gt;)&lt;br/&gt;David Gonzalez (&lt;a href=\"mailto:redandy16@gmail.com\"&gt;redandy16@gmail.com&lt;/a&gt;)&lt;br/&gt;Soudain (&lt;a href=\"mailto:grorigan@gmail.com\"&gt;grorigan@gmail.com&lt;/a&gt;)</string>
    <string name="app_more_info2">&lt;br/&gt;&lt;br/&gt;Thanks a lot!! :)&lt;br/&gt;&lt;br/&gt;The typeface used as the dyslexia-friendly typeface is OpenDyslexic Regular, by Abelardo Gonzalez, available at &lt;a href=\"http://dyslexicfonts.com\"&gt;dyslexicfonts.com&lt;/a&gt; and licensed under a &lt;a href=\"https://creativecommons.org/licenses/by/3.0/us/legalcode\"&gt;Creative Commons Attribution 3.0 Unported License&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;The typeface used to draw the scalable icons, icons.ttf, was created using IcoMoon App, by Keyamoon, available at: &lt;a href=\"http://icomoon.io/app\"&gt;icomoon.io/app&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Some of the scalable icons were created by me and some came from the IcoMoon Free icon set, by Keyamoon, licensed under the &lt;a href=\"https://creativecommons.org/licenses/by/3.0/us/legalcode\"&gt;Creative Commons License 3.0&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;The classes BgEdgeEffect, BitmapLruCache, FixedFFT and NonNull are based on existing code from The Android Open Source Project, licensed under the &lt;a href=\"http://www.apache.org/licenses/LICENSE-2.0\"&gt;Apache License 2.0&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;The classes Vector3, Matrix3x3, So3Util, OrientationEKF and HeadTracker are based on existing code from &lt;a href=\"https://github.com/googlesamples/cardboard-java\"&gt;Google Cardboard&lt;/a&gt; and &lt;a href=\"https://github.com/rsanchezsaez/cardboard-java\"&gt;github.com/rsanchezsaez/cardboard-java&lt;/a&gt;, licensed under the &lt;a href=\"http://www.apache.org/licenses/LICENSE-2.0\"&gt;Apache License 2.0&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt;FPlay is licensed under the terms of the FreeBSD License.</string>
    <string name="app_license" translatable="false">&lt;br/&gt;&lt;br/&gt;Copyright &#169; 2013–2014, Carlos Rafael Gimenes das Neves&lt;br/&gt;All rights reserved.&lt;br/&gt;&lt;br/&gt;Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:&lt;br/&gt;&lt;br/&gt;1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.&lt;br/&gt;2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.&lt;br/&gt;&lt;br/&gt;THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.&lt;br/&gt;&lt;br/&gt;The views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
    <string name="system_info">System information</string>
    <string name="resolution">Resolution</string>
    <string name="nothing_playing">Nothing playing</string>
    <string name="oops">Oops&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="adding_songs">Adding songs&#8230;</string>
    <string name="empty_list">Empty list!</string>
    <string name="no_songs_found">No songs found!</string>
    <string name="error">Error:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="got_it">Got it!</string>
    <string name="volume">Volume</string>
    <string name="go_to">Go to</string>
    <string name="msg_sel">Click to select more items</string>
    <string name="msg_move">Click to move selected items</string>
    <string name="msg_select_song">Please, select a song to add</string>
    <string name="msg_select_folder_add">Please, select a folder to add</string>
    <string name="msg_select_folder_play">Please, select a folder to play</string>
    <string name="msg_select_favorite_remove">Please, select a favorite to remove</string>
    <string name="msg_turn_off_title">Automatic shutdown</string>
    <string name="msg_turn_off">Turn off the player after how many minutes?</string>
    <string name="msg_enter_name">Enter a name for the new %s</string>
    <string name="msg_confirm_overwrite">Do you really want to overwrite the %1$s \"%2$s\"?</string>
    <string name="msg_confirm_delete">Do you really want to delete the %1$s \"%2$s\"?</string>
    <string name="msg_overwrite">Overwrite %1$s \"%2$s\"</string>
    <string name="msg_delete">Delete %1$s \"%2$s\"</string>
    <string name="msg_delete_button">Delete&#8230;</string>
    <string name="msg_create_new_title">Create new %s</string>
    <string name="msg_create_new">Create new&#8230;</string>
    <string name="msg_add">This button adds to the playlist all songs in the folder and in its subfolders.</string>
    <string name="msg_play">This button adds to the playlist all songs in the folder and in its subfolders, and starts the playback.</string>
    <string name="msg_error_download_path">It was not possible to access the download folder :(</string>
    <string name="msg_error_exporting_settings">Something went wrong while exporting the settings :(</string>
    <string name="opt_bluetooth_connect">Bluetooth headset connection detection</string>
    <string name="opt_language">Language:</string>
    <string name="opt_use_alternate_typeface">Use dyslexia-friendly typeface</string>
    <string name="opt_auto_turn_off">Automatically turn off the player after:</string>
    <string name="opt_auto_idle_turn_off">When idle, automatically turn off the player after:</string>
    <string name="opt_read_phone_state">Prevent the player from turning off during phone calls</string>
    <string name="opt_auto_turn_off_playlist">Turn off the player when reaching the end of the list (\"Repeat none\" must be selected)</string>
    <string name="opt_keep_screen_on">Keep screen always on</string>
    <string name="opt_volume_control_type">Volume control type:</string>
    <string name="opt_is_divider_visible">Show divider between items in lists</string>
    <string name="opt_is_vertical_margin_large">Use large spacing between items in lists</string>
    <string name="opt_handle_call_key">Use Call/Dial key as Play/Pause</string>
    <string name="opt_do_not_attenuate_volume">Do not attenuate music volume when system notifications happen</string>
    <string name="opt_play_when_headset_plugged">Automatically play when wired earphones are plugged in</string>
    <string name="opt_block_back_key">Prevent the Back key from returning to the home screen</string>
    <string name="opt_double_click_mode">Use two clicks/touches to play songs in the playlist</string>
    <string name="opt_marquee_title">Spin current song\'s title when it does not fit on the screen</string>
    <string name="opt_prepare_next">Preload next song in order to try to reduce the gap between consecutive songs</string>
    <string name="opt_clear_list_when_playing_folders">Clear existing list before playing a folder, a new list, an album or an artist</string>
    <string name="opt_go_back_when_playing_folders">Return to the list when playing a folder, a new list, an album or an artist</string>
    <string name="opt_force_orientation">Force screen orientation as:</string>
    <string name="opt_fade_in_focus">Volume fade in\'s duration after a call, or another external interruption:</string>
    <string name="opt_fade_in_pause">Volume fade in\'s duration when unpausing:</string>
    <string name="opt_fade_in_other">Volume fade in\'s duration when starting new songs after silence:</string>
    <string name="hdr_display">Appearance and display</string>
    <string name="hdr_playback">Playback</string>
    <string name="hdr_behavior">Behavior</string>
    <string name="volume_control_type_integrated">Integrated with the system</string>
    <string name="volume_control_type_decibels">Decibels</string>
    <string name="volume_control_type_percentage">Percentage</string>
    <string name="custom">Custom&#8230;</string>
    <string name="never">Never</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="none">None</string>
    <string name="noneM">None</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="dshort">Short</string>
    <string name="dmedium">Medium</string>
    <string name="dlong">Long</string>
    <string name="up">Up</string>
    <string name="home">Home</string>
    <string name="add_url_title">Add URL</string>
    <string name="add_url">URL</string>
    <string name="url">URL</string>
    <string name="description">Description</string>
    <string name="favorite">Favorite</string>
    <string name="menu">Menu</string>
    <string name="decrease_volume">Decrease volume</string>
    <string name="increase_volume">Increase volume</string>
    <string name="add_songs">Add songs</string>
    <string name="control_mode">Control mode</string>
    <string name="list">List&#8230;</string>
    <string name="list2">List</string>
    <string name="clear_list">Clear list</string>
    <string name="load_list">Load list</string>
    <string name="save_list">Save list</string>
    <string name="item_list">list</string>
    <string name="more">More&#8230;</string>
    <string name="about">About</string>
    <string name="move">Move</string>
    <string name="remove">Remove</string>
    <string name="go_back">Return</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="play">Play</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="track">Track</string>
    <string name="duration">Duration</string>
    <string name="no_info">-</string>
    <string name="information">Information</string>
    <string name="ringtone">Ringtone</string>
    <string name="share">Share</string>
</resources>