<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/panelInfo"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="16dp"
                android:splitMotionEvents="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/panelBottom"
        android:layout_alignParentTop="true"
        android:splitMotionEvents="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:splitMotionEvents="false">

            <TextView
                android:id="@+id/lblTitleStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:singleLine="true"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingLeft="8dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/nothing_playing"/>

            <TextView
                android:id="@+id/lblArtistStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:singleLine="true"
                android:text="@string/artist"/>

            <TextView
                android:id="@+id/lblArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:ellipsize="end"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:text="@string/no_info"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:splitMotionEvents="false">

                <TextView
                    android:id="@+id/lblTrackStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="16dp"
                    android:singleLine="true"
                    android:text="@string/track"/>

                <TextView
                    android:id="@+id/lblTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignRight="@+id/lblTrackStatic"
                    android:layout_below="@+id/lblTrackStatic"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:text="@string/no_info"/>

                <TextView
                    android:id="@+id/lblAlbumStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:layout_toRightOf="@+id/lblTrackStatic"
                    android:singleLine="true"
                    android:text="@string/album"/>

                <TextView
                    android:id="@+id/lblAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblAlbumStatic"
                    android:layout_toRightOf="@+id/lblTrackStatic"
                    android:ellipsize="end"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:text="@string/no_info"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/lblLengthStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:singleLine="true"
                android:text="@string/duration"/>

            <TextView
                android:id="@+id/lblLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:text="@string/no_info"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/panelBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:splitMotionEvents="false">

        <LinearLayout
            android:id="@+id/panelSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:splitMotionEvents="false">

            <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
                android:id="@+id/barSeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:nextFocusDown="@+id/btnPrev"
                android:nextFocusForward="@+id/barVolume"
                android:nextFocusLeft="@+id/list"
                android:nextFocusRight="@+id/barVolume"
                android:nextFocusUp="@+id/list"/>

            <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
                android:id="@+id/barVolume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_weight="1"
                android:nextFocusDown="@+id/btnMenu"
                android:nextFocusForward="@+id/btnAdd"
                android:nextFocusLeft="@+id/list"
                android:nextFocusRight="@+id/btnAdd"
                android:nextFocusUp="@+id/list"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/volume"
                android:nextFocusDown="@+id/btnMenu"
                android:nextFocusForward="@+id/btnAdd"
                android:nextFocusLeft="@+id/list"
                android:nextFocusRight="@+id/btnAdd"
                android:nextFocusUp="@+id/list"
                android:visibility="gone"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/panelControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:splitMotionEvents="false">

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/add_songs"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnPrev"
                android:nextFocusLeft="@+id/list"
                android:nextFocusRight="@+id/btnPrev"
                android:nextFocusUp="@+id/barVolume"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@+id/btnPlay"
                android:contentDescription="@string/previous"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnPlay"
                android:nextFocusLeft="@+id/btnAdd"
                android:nextFocusRight="@+id/btnPlay"
                android:nextFocusUp="@+id/barVolume"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/play"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnNext"
                android:nextFocusLeft="@+id/btnPrev"
                android:nextFocusRight="@+id/btnNext"
                android:nextFocusUp="@+id/barVolume"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btnPlay"
                android:contentDescription="@string/next"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnMenu"
                android:nextFocusLeft="@+id/btnPlay"
                android:nextFocusRight="@+id/btnMenu"
                android:nextFocusUp="@+id/barVolume"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/menu"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/list"
                android:nextFocusLeft="@+id/btnNext"
                android:nextFocusRight="@+id/list"
                android:nextFocusUp="@+id/barVolume"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/lblMsgSelMove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/msg_sel"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/panelSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:splitMotionEvents="false"
            android:visibility="gone">

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnCancelSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/go_back"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnShare"
                android:nextFocusLeft="@+id/list"
                android:nextFocusRight="@+id/btnShare"
                android:nextFocusUp="@+id/list"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/btnSetRingtone"
                android:contentDescription="@string/share"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnSetRingtone"
                android:nextFocusLeft="@+id/btnCancelSel"
                android:nextFocusRight="@+id/btnSetRingtone"
                android:nextFocusUp="@+id/list"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnSetRingtone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/btnMoreInfo"
                android:contentDescription="@string/ringtone"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnMoreInfo"
                android:nextFocusLeft="@+id/btnShare"
                android:nextFocusRight="@+id/btnMoreInfo"
                android:nextFocusUp="@+id/list"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/btnMoveSel"
                android:contentDescription="@string/information"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnMoveSel"
                android:nextFocusLeft="@+id/btnSetRingtone"
                android:nextFocusRight="@+id/btnMoveSel"
                android:nextFocusUp="@+id/list"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnMoveSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/btnRemoveSel"
                android:contentDescription="@string/move"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/btnRemoveSel"
                android:nextFocusLeft="@+id/btnMoreInfo"
                android:nextFocusRight="@+id/btnRemoveSel"
                android:nextFocusUp="@+id/list"/>

            <br.com.carlosrafaelgn.fplay.ui.BgButton
                android:id="@+id/btnRemoveSel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/remove"
                android:nextFocusDown="@+id/list"
                android:nextFocusForward="@+id/list"
                android:nextFocusLeft="@+id/btnMoveSel"
                android:nextFocusRight="@+id/list"
                android:nextFocusUp="@+id/list"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
