<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="false"
              android:orientation="vertical"
              android:splitMotionEvents="false"
              tools:context=".ActivityHost">

    <RelativeLayout
        android:id="@+id/panelControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:splitMotionEvents="false">

        <br.com.carlosrafaelgn.fplay.ui.BgButton
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/go_back"
            android:nextFocusDown="@+id/lblMsg"
            android:nextFocusForward="@+id/lblMsg"
            android:nextFocusLeft="@+id/lblMsg"
            android:nextFocusRight="@+id/lblMsg"
            android:nextFocusUp="@+id/lblMsg">

            <requestFocus/>
        </br.com.carlosrafaelgn.fplay.ui.BgButton>

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/about"
            android:src="@mipmap/ic_launcher_fg"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgIcon"
            android:layout_toLeftOf="@+id/imgIcon"
            android:layout_marginRight="4dp"
            android:baselineAligned="true"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/lblVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/lblAppBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgIcon"
            android:gravity="right"
            android:padding="4dp"
            android:text="@string/app_by"/>
    </RelativeLayout>

    <br.com.carlosrafaelgn.fplay.ui.ObservableScrollView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/panelSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/lblMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:nextFocusDown="@+id/btnGoBack"
                android:nextFocusForward="@+id/btnGoBack"
                android:nextFocusLeft="@+id/btnGoBack"
                android:nextFocusRight="@+id/btnGoBack"
                android:nextFocusUp="@+id/btnGoBack"/>

            <TextView
                android:id="@+id/lblDbg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="false"
                android:gravity="right"/>

            <TextView
                android:id="@+id/lblUsage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="right"
                android:maxLines="3"/>
        </LinearLayout>
    </br.com.carlosrafaelgn.fplay.ui.ObservableScrollView>

</LinearLayout>
